# advent_of_code

2019/: .ocamlformat  dune-project
2019/lib/: day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  dune  inicode.ml  utils.ml
2020/: shard.yml
2020/spec/: day1.cr  day2.cr  day3.cr  day4.cr  day5.cr
2020/src/lib/: day1.cr  day2.cr  day3.cr  day4.cr  day5.cr
2021/: Cargo.toml
2021/day1/part1/src/: main.rs
2021/day1/part2/src/: main.rs
2021/day2/part1/src/: main.rs
2021/day2/part2/src/: main.rs
2021/src/: day10.rs  day11.rs  day12.rs  day15.rs  day1_part1.rs  day1_part2.rs  day2_part1.rs  day2_part2.rs  day3_part1.rs  day3_part2.rs  day4.rs  day5_part1.rs  day5_part2.rs  day6.rs  day7.rs  day8.rs
2022/: Cargo.toml
2022/src/: day1.rs  day2.rs  lib.rs
2023/: Cargo.toml
2023/src/: lib.rs
