[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1_part1"
path = "src/day1_part1.rs"

[[bin]]
name = "day1_part2"
path = "src/day1_part2.rs"

[[bin]]
name = "day2_part1"
path = "src/day2_part1.rs"

[[bin]]
name = "day2_part2"
path = "src/day2_part2.rs"

[[bin]]
name = "day3_part1"
path = "src/day3_part1.rs"

[[bin]]
name = "day3_part2"
path = "src/day3_part2.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5_part1"
path = "src/day5_part1.rs"

[[bin]]
name = "day5_part2"
path = "src/day5_part2.rs"

[dependencies]
