[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1_part1"
path = "src/day1_part1.rs"

[[bin]]
name = "day1_part2"
path = "src/day1_part2.rs"

[[bin]]
name = "day2_part1"
path = "src/day2_part1.rs"

[[bin]]
name = "day2_part2"
path = "src/day2_part2.rs"

[[bin]]
name = "day3_part1"
path = "src/day3_part1.rs"

[[bin]]
name = "day3_part2"
path = "src/day3_part2.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5_part1"
path = "src/day5_part1.rs"

[[bin]]
name = "day5_part2"
path = "src/day5_part2.rs"

[[bin]]
name = "day6"
path = "src/day6.rs"

[[bin]]
name = "day7"
path = "src/day7.rs"

[[bin]]
name = "day8"
path = "src/day8.rs"

[[bin]]
name = "day9"
path = "src/day9.rs"

[[bin]]
name = "day10"
path = "src/day10.rs"

[[bin]]
name = "day11"
path = "src/day11.rs"

[[bin]]
name = "day12"
path = "src/day12.rs"

[[bin]]
name = "day13"
path = "src/day13.rs"

[[bin]]
name = "day14"
path = "src/day14.rs"

[[bin]]
name = "day15"
path = "src/day15.rs"

[dependencies]
